--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,4 +195,10 @@ input[type="submit"] {
 		color: white;
 	}
 }
+
+#notice {
+	color: white;
+	font-size: 2rem;
+}
+
 ::-webkit-input-placeholder { color: $dark; }
